--- a/starbucks.css
+++ b/starbucks.css
@@ -3,74 +3,117 @@
 -----------------------------------------*/
 
 .custom-navbar {
-    border: none;
-    margin-bottom: 0;
-    background-color: #ffffff;
-    padding-top: 22px;
+  border: none;
+  margin-bottom: 0;
+  background-color: #ffffff;
+  padding-top: 22px;
+}
+
+.custom-navbar .navbar-brand {
+  color: #e47878;
+  font-weight: normal;
+  font-size: 30px;
+}
+
+.custom-navbar .nav li a {
+  font-size: 18px;
+  font-weight: normal;
+  color: #51BA67;
+  letter-spacing: 1px;
+  -webkit-transition: all ease-in-out 0.4s;
+  transition: all ease-in-out 0.4s;
+  padding: 0;
+  margin: 15px;
+}
+
+.custom-navbar .navbar-nav > li > a:hover,
+.custom-navbar .navbar-nav > li > a:focus {
+  background-color: transparent;
+  color: #e47878;
+}
+
+.custom-navbar .navbar-nav li a:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0px;
+  height: 2px;
+  margin: auto;
+  background: transparent;
+  transition: width .3s ease, background-color .3s ease;
+}
+
+.custom-navbar .navbar-nav li a:hover:after,
+.custom-navbar .nav li.active > a:after {
+  background: #e47878;
+  color: #ffffff;
+  width: 100%;
+}
+
+.custom-navbar .nav li.active > a {
+  background-color: transparent;
+  color: #454545;
+}
+
+.custom-navbar .navbar-toggle {
+  border: none;
+  padding-top: 12px;
+}
+
+.custom-navbar .navbar-toggle {
+  background-color: transparent;
+}
+
+.custom-navbar .navbar-toggle .icon-bar {
+  background: #000000;
+  border-color: transparent;
+}
+@media(min-width:768px) {
+  .custom-navbar {
+    border-bottom: 0;
+    background: 0 0; 
   }
-  
-  .custom-navbar .navbar-brand {
-    color: #e47878;
-    font-weight: normal;
+  .custom-navbar.top-nav-collapse {
+    background:#ffffff;
+    box-shadow:0 40px 100px rgba(0,0,0,.2);
+    padding: 10px 0;
+  }
+
+}
+@media (max-width: 768px) {
+
+  h1 {
     font-size: 30px;
+    line-height: normal;
   }
-  
+
+  h2  {font-size: 30px;}
+
+  .custom-navbar {
+    background-color: #ffffff;
+    box-shadow:0 40px 100px rgba(0,0,0,.2);
+    padding-top: 0px;
+    padding-bottom: 5px;
+  }
+
+  .custom-navbar .nav {
+    padding-bottom: 10px;
+  }
+
   .custom-navbar .nav li a {
-    font-size: 18px;
-    font-weight: normal;
-    color: #51BA67;
-    letter-spacing: 1px;
-    -webkit-transition: all ease-in-out 0.4s;
-    transition: all ease-in-out 0.4s;
-    padding: 0;
-    margin: 15px;
+    display: inline-block;
+    margin-bottom: 5px;
   }
+
+}
+
+
+
+
+
   
-  .custom-navbar .navbar-nav > li > a:hover,
-  .custom-navbar .navbar-nav > li > a:focus {
-    background-color: transparent;
-    color: #e47878;
-  }
-  
-  .custom-navbar .navbar-nav li a:after {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 0px;
-    height: 2px;
-    margin: auto;
-    background: transparent;
-    transition: width .3s ease, background-color .3s ease;
-  }
-  
-  .custom-navbar .navbar-nav li a:hover:after,
-  .custom-navbar .nav li.active > a:after {
-    background: #e47878;
-    color: #ffffff;
-    width: 100%;
-  }
-  
-  .custom-navbar .nav li.active > a {
-    background-color: transparent;
-    color: #454545;
-  }
-  
-  .custom-navbar .navbar-toggle {
-    border: none;
-    padding-top: 12px;
-  }
-  
-  .custom-navbar .navbar-toggle {
-    background-color: transparent;
-  }
-  
-  .custom-navbar .navbar-toggle .icon-bar {
-    background: #000000;
-    border-color: transparent;
-  }
-  
-@media (min-width: 568px) and (max-width: 665px) {
+@media (max-width: 357px) {
   #work {
-      width: 600px;
+      width: 100%;
     }
-  }
+}
