--- a/css/style.css
+++ b/css/style.css
@@ -276,17 +276,19 @@ a:hover, a:active, a:focus {
 }
 
 @media(min-width:768px) {
-    .custom-navbar {
-      border-bottom: 0;
-      background: 0 0; 
-    }
-    .custom-navbar.top-nav-collapse {
-      background: #ffffff;
-      box-shadow:0 40px 100px rgba(0,0,0,.2);
-      padding: 10px 0;
-    }
+  .custom-navbar {
+    border-bottom: 0;
+    background: 0 0; 
+  }
+  .custom-navbar.top-nav-collapse {
+    background: transparent;
+    box-shadow:0 40px 100px rgba(0,0,0,.2);
+    padding: 10px 0;
+  }
 
 }
+
+
 
 
 
@@ -465,22 +467,12 @@ a:hover, a:active, a:focus {
 
   h2  {font-size: 30px;}
 
-  .custom-navbar {
-    background-color: #ffffff;
-    box-shadow:0 40px 100px rgba(0,0,0,.2);
-    padding-top: 0px;
-    padding-bottom: 5px;
-  }
-
-  .custom-navbar .nav {
-    padding-bottom: 10px;
-  }
+  
 
   .custom-navbar .nav li a {
     display: inline-block;
     margin-bottom: 5px;
   }
-
 }
 
 
