--- a/starbucks.css
+++ b/starbucks.css
@@ -68,43 +68,8 @@
   background: #000000;
   border-color: transparent;
 }
-@media(min-width:768px) {
-  .custom-navbar {
-    border-bottom: 0;
-    background: 0 0; 
-  }
-  .custom-navbar.top-nav-collapse {
-    background:#ffffff;
-    box-shadow:0 40px 100px rgba(0,0,0,.2);
-    padding: 10px 0;
-  }
-
-}
-@media (max-width: 768px) {
-
-  h1 {
-    font-size: 30px;
-    line-height: normal;
-  }
-
-  h2  {font-size: 30px;}
-
-  .custom-navbar {
-    background-color: #ffffff;
-    box-shadow:0 40px 100px rgba(0,0,0,.2);
-    padding-top: 0px;
-    padding-bottom: 5px;
-  }
-
-  .custom-navbar .nav {
-    padding-bottom: 10px;
-  }
-
-  .custom-navbar .nav li a {
-    display: inline-block;
-    margin-bottom: 5px;
-  }
-
+.custom-navbar{
+  background-color:transparent;
 }
 
 
