--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,16 @@ a:hover, a:active, a:focus {
 
   h2  {font-size: 30px;}
 
-  
+  .custom-navbar {
+    background-color: #ffffff;
+    box-shadow:0 40px 100px rgba(0,0,0,.2);
+    padding-top: 0px;
+    padding-bottom: 5px;
+  }
+
+  .custom-navbar .nav {
+    padding-bottom: 10px;
+  }
 
   .custom-navbar .nav li a {
     display: inline-block;
