--- a/starbucks.css
+++ b/starbucks.css
@@ -29,7 +29,7 @@
 .custom-navbar .navbar-nav > li > a:hover,
 .custom-navbar .navbar-nav > li > a:focus {
   background-color: transparent;
-  color: #e47878;
+  color: #E0D1A7;
 }
 
 .custom-navbar .navbar-nav li a:after {
@@ -45,7 +45,7 @@
 
 .custom-navbar .navbar-nav li a:hover:after,
 .custom-navbar .nav li.active > a:after {
-  background: #e47878;
+  background: #E0D1A7;
   color: #ffffff;
   width: 100%;
 }
